Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignBoolObjBoolObjWrapped.quorum
class Main
    action Main
        Boolean b
        b:SetValue(true)
        Boolean bool = b
        output bool
    end
end