Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjBoolObjField.quorum
class main
    Boolean b
    Number num
    action Main
        b:SetValue(true)
        num = cast(Number, b)
    end
end